fix #880 Wrong color for AppLayout header description

--- a/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui/dui-components/domino-ui-colors-dark.css
+++ b/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/domino-ui/dui-components/domino-ui-colors-dark.css
@@ -419,7 +419,7 @@
     --dui-datatable-border-color: var(--dui-accent-d-4);
     --dui-datatable-column-resizer-color: var(--dui-accent-d-2);
     --dui-datatable-pin-column-border-color: var(--dui-accent-d-2);
-    --dui-nav-bar-description-color: var(--dui-color-1);
+    --dui-nav-bar-description-color: var(--dui-clr-white);
     --dui-datatable-tfoot-bg-color: var(--dui-accent-d-4);
 
 }
